--- a/bnbnav-frontend/mainwindow.ui
+++ b/bnbnav-frontend/mainwindow.ui
@@ -31,7 +31,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="TopWidget" name="widget" native="true"/>
+     <widget class="TopWidget" name="topWidget" native="true"/>
     </item>
     <item>
      <spacer name="verticalSpacer">
