--- a/bnbnav-frontend/topwidget.ui
+++ b/bnbnav-frontend/topwidget.ui
@@ -15,13 +15,20 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
+    <widget class="QLabel" name="panLabel">
+     <property name="text">
+      <string notr="true">x: 0   y: 0</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>293</width>
+       <width>230</width>
        <height>20</height>
       </size>
      </property>
