--- a/bnbnav-frontend/topwidget.ui
+++ b/bnbnav-frontend/topwidget.ui
@@ -44,6 +44,13 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QPushButton" name="loginButton">
+     <property name="text">
+      <string notr="true">Log In</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
