Implement search and landmark clicks

--- a/bnbnav-frontend/resources.qrc
+++ b/bnbnav-frontend/resources.qrc
@@ -30,5 +30,6 @@
         <file>landmarks/generic-red.svg</file>
         <file>landmarks/invisible.svg</file>
         <file>Overpass-Regular.ttf</file>
+        <file>pin.svg</file>
     </qresource>
 </RCC>
