--- a/bnbnav-frontend/topwidget.ui
+++ b/bnbnav-frontend/topwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>509</width>
     <height>94</height>
    </rect>
   </property>
@@ -33,6 +33,13 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="QPushButton" name="spyButton">
+     <property name="text">
+      <string>Spy</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QPushButton" name="editModeButton">
